@@ -1,3 +1,7 @@
+2014-09-11  François Déchelle  <francois@dechelle.net>
+
+	* fixed status related bugs after introducing white listed status; tested
+
 2014-09-10  François Déchelle  <francois@dechelle.net>
 
 	* added white listed status for module 1
